--- a/assets/js/app/modules/reports/hashtag/hashtag-report.component.html
+++ b/assets/js/app/modules/reports/hashtag/hashtag-report.component.html
@@ -1,4 +1,4 @@
-<div ng-if="hashtag_report_data.created_by">
+<div style="padding-top:120px;" ng-if="hashtag_report_data.created_by">
     <h3>{{ hashtag_report_data.created_by }}</h3>
 </div>
 <div ng-if="hashtag_report_data.notFound">
