Implement simple notification system.
implement simple notification system that will be used for notify user in whole App.

--- a/assets/js/app/modules/followTree/follow-tree.component.html
+++ b/assets/js/app/modules/followTree/follow-tree.component.html
@@ -144,7 +144,7 @@
                                     </button>
                                 </td>
                                 <td class="td-actions">
-                                    <button type="button" rel="tooltip" ng-click = "shareTree(tree.name , tree.description)"  data-placement="left"  title="Share" class="btn btn-neutral shareTree">
+                                    <button type="button" rel="tooltip" ng-click = "shareTree(sub_tree.name , sub_tree.description)"  data-placement="left"  title="Share" class="btn btn-neutral shareTree">
                                         <i class="fas fa-share"></i>
                                     </button>
                                 </td>
